Prototype de l'application cliente arrêtée : à compléter dans le TP1

--- a/ressources/css/leila-admin.css
+++ b/ressources/css/leila-admin.css
@@ -44,7 +44,8 @@ body header nav ul li.actif {
 body table {
   border-collapse: collapse;
   margin: 2rem auto;
-  min-width: 80vw;
+  min-width: 70vw;
+  max-width: 90vw;
   font-family: "Roboto";
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
